# metronome-cli

./: .gitignore  Actions.hs  CHANGELOG.md  CLI.hs  Config.hs  Digits.hs  Metronome.hs  MyLib.hs  Playback.hs  Q.hs  README.md  Recording.hs  UI.hs  default.nix  make_digits.sh  metronome-cli.cabal  packages.nix  shell.nix
app/: Main.hs
digits/: 0  1  2  3  4  5  6  7  8  9
src/: Actions.hs  CLI.hs  Config.hs  Metronome.hs  Playback.hs  Recording.hs  UI.hs
