cabal-version:       2.4
name:                metronome-cli
version:             0.1.0.0
author:              Nick Partridge
maintainer:          nkpart@gmail.com
extra-source-files:  CHANGELOG.md

Data-Files: 
  157-click1.wav
  digits/1
  digits/2
  digits/3
  digits/4
  digits/5
  digits/6
  digits/7
  digits/8
  digits/9
  digits/0
  "High Seiko SQ50.wav"
  "Low Seiko SQ50.wav"

library
  ghc-options:  -O2 -Wall
  exposed-modules:     
              Metronome
            , MyLib
            , Q
            , UI
            , CLI
            , Paths_metronome_cli
            , Actions
            , Digits
            , Config
  build-depends:       base >=4.13.0.0
                     , sdl2-mixer
                     , sdl2
                     , async
                     , mwc-random
                     , random
                     , vty
                     , brick
                     , microlens-platform
                     , microlens
                     , directory
                     , filepath
                     , time
                     , optparse-applicative
                     , vector
                     , unix
                     , ansi-terminal
  default-language:    Haskell2010
  frameworks: CoreAudio

executable metronome-cli
  ghc-options:  -O2 -Wall -threaded
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.13.0.0, metronome-cli
  default-language:    Haskell2010
